exports[`SortObject Check blank 1`] = `"{}"`;

exports[`SortObject Check null 1`] = `"{}"`;

exports[`SortObject Check null array 1`] = `"[]"`;

exports[`SortObject Check undefined 1`] = `"{}"`;

exports[`SortObject Sort date value 1`] = `
Array [
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  },
  Object {
    "date": "2011-10-25T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  }
]
`;

exports[`SortObject Sort date value descending 1`] = `
Array [
  Object {
    "affectedThing": 2,
    "cleaning": Object {
      "ok": true
    },
    "doneBy": 1,
    "doneDate": "2016-10-28T00:00:00+00:00",
    "eventType": "Control",
    "hypoxicAir": Object {
      "ok": true
    },
    "id": 59,
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-28T13:30:58+00:00",
    "relativeHumidity": Object {
      "ok": true
    },
    "temperature": Object {
      "ok": true
    }
  },
  Object {
    "affectedThing": 2,
    "doneBy": 1,
    "doneDate": "2016-10-28T00:00:00+00:00",
    "eventType": "Control",
    "id": 44,
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-28T13:18:09+00:00",
    "relativeHumidity": Object {
      "ok": true
    },
    "temperature": Object {
      "ok": true
    }
  },
  Object {
    "affectedThing": 2,
    "doneBy": 2,
    "doneDate": "2016-10-31T00:00:00+00:00",
    "eventType": "Observation",
    "gas": Object {
      "gas": "jkhjkhjkjh"
    },
    "id": 73,
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-31T13:49:41+00:00"
  },
  Object {
    "affectedThing": 2,
    "doneBy": 3,
    "doneDate": "2016-11-01T00:00:00+00:00",
    "eventType": "Observation",
    "id": 77,
    "lightingCondition": Object {
      "lightingCondition": "ffgdfgdfg"
    },
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-11-01T10:08:29+00:00"
  },
  Object {
    "affectedThing": 2,
    "alcohol": Object {
      "ok": true
    },
    "cleaning": Object {
      "ok": true
    },
    "doneBy": 1,
    "doneDate": "2016-10-28T00:00:00+00:00",
    "eventType": "Control",
    "gas": Object {
      "ok": true
    },
    "hypoxicAir": Object {
      "ok": true
    },
    "id": 49,
    "lightingCondition": Object {
      "ok": true
    },
    "mold": Object {
      "ok": true
    },
    "pest": Object {
      "ok": true
    },
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-28T13:21:04+00:00",
    "relativeHumidity": Object {
      "ok": true
    },
    "temperature": Object {
      "ok": true
    }
  },
  Object {
    "affectedThing": 2,
    "doneBy": 1,
    "doneDate": "2016-10-28T00:00:00+00:00",
    "eventType": "Observation",
    "gas": Object {
      "gas": "ghgfhghfgh"
    },
    "id": 47,
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-28T13:18:24+00:00"
  },
  Object {
    "affectedThing": 2,
    "doneBy": 3,
    "doneDate": "2016-10-31T00:00:00+00:00",
    "eventType": "Observation",
    "gas": Object {
      "gas": "ølæløæ"
    },
    "id": 79,
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-11-01T10:40:58+00:00"
  },
  Object {
    "affectedThing": 2,
    "doneBy": 1,
    "doneDate": "2016-10-28T00:00:00+00:00",
    "eventType": "Observation",
    "id": 42,
    "lightingCondition": Object {
      "lightingCondition": "hfghfghgfh"
    },
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-28T13:17:50+00:00"
  },
  Object {
    "affectedThing": 2,
    "doneBy": 1,
    "doneDate": "2016-10-28T00:00:00+00:00",
    "eventType": "Control",
    "hypoxicAir": Object {
      "ok": true
    },
    "id": 38,
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-28T13:07:07+00:00",
    "relativeHumidity": Object {
      "ok": true
    },
    "temperature": Object {
      "ok": true
    }
  },
  Object {
    "affectedThing": 2,
    "alcohol": Object {
      "ok": true
    },
    "cleaning": Object {
      "ok": true
    },
    "doneBy": 1,
    "doneDate": "2016-10-25T00:00:00+00:00",
    "eventType": "Control",
    "gas": Object {
      "ok": true
    },
    "hypoxicAir": Object {
      "ok": true
    },
    "id": 28,
    "lightingCondition": Object {
      "ok": true
    },
    "mold": Object {
      "ok": true
    },
    "pest": Object {
      "ok": true
    },
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-25T11:33:51+00:00",
    "relativeHumidity": Object {
      "ok": true
    },
    "temperature": Object {
      "ok": true
    }
  },
  Object {
    "affectedThing": 2,
    "doneBy": 1,
    "doneDate": "2016-10-24T00:00:00+00:00",
    "eventType": "Control",
    "id": 4,
    "lightingCondition": Object {
      "ok": true
    },
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-24T11:14:49+00:00",
    "relativeHumidity": Object {
      "ok": true
    },
    "temperature": Object {
      "ok": true
    }
  },
  Object {
    "affectedThing": 2,
    "doneBy": 1,
    "doneDate": "2016-10-24T00:00:00+00:00",
    "eventType": "Observation",
    "gas": Object {
      "gas": "dsfdf"
    },
    "id": 2,
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-24T11:14:41+00:00"
  },
  Object {
    "affectedThing": 2,
    "alcohol": Object {
      "ok": true
    },
    "cleaning": Object {
      "ok": true
    },
    "doneBy": 1,
    "doneDate": "2015-10-24T00:00:00+00:00",
    "eventType": "Control",
    "gas": Object {
      "ok": true
    },
    "id": 8,
    "lightingCondition": Object {
      "ok": true
    },
    "mold": Object {
      "observation": Object {
        "mold": "dfsdfdsf",
        "note": "dfsdf"
      },
      "ok": false
    },
    "pest": Object {
      "observation": Object {
        "identification": "dfsdfsd",
        "lifecycles": Array [
          Object {
            "quantity": 2,
            "stage": "Adult"
          }
        ],
        "note": "dfsdfsdf"
      },
      "ok": false
    },
    "registeredBy": "Darth Vader",
    "registeredDate": "2016-10-24T11:15:17+00:00",
    "relativeHumidity": Object {
      "ok": true
    },
    "temperature": Object {
      "ok": true
    }
  }
]
`;

exports[`SortObject Sort date value descending 2 1`] = `
Array [
  Object {
    "doneDateOnly": "2016-10-28T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-28T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-31T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-11-01T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-28T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-28T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-31T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-28T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-28T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2017-10-25T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-24T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-24T00:00:00+00:00"
  },
  Object {
    "doneDateOnly": "2016-10-24T00:00:00+00:00"
  }
]
`;

exports[`SortObject Sort float (floatInStr) in string value 1`] = `
Array [
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  }
]
`;

exports[`SortObject Sort float (floatInStr) in string value descending 1`] = `
Array [
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "floatInStr": "2.2"
  },
  Object {},
  Object {}
]
`;

exports[`SortObject Sort float in string value 1`] = `
Array [
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  }
]
`;

exports[`SortObject Sort float in string value descending 1`] = `
Array [
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  }
]
`;

exports[`SortObject Sort inputJsonObject on displayName 1`] = `
Array [
  Object {
    "displayName": "Sommerfugl",
    "id": 3,
    "identifier": Object {
      "museumNo": "C333",
      "subNo": "38"
    }
  },
  Object {
    "displayName": "Sverd",
    "id": 2,
    "identifier": Object {
      "museumNo": "C222",
      "subNo": "31"
    }
  },
  Object {
    "displayName": "Øks",
    "id": 5,
    "identifier": Object {
      "museumNo": "C666",
      "subNo": "3"
    }
  }
]
`;

exports[`SortObject Sort inputJsonObject on id 1`] = `
Array [
  Object {
    "displayName": "Sverd",
    "id": 2,
    "identifier": Object {
      "museumNo": "C222",
      "subNo": "31"
    }
  },
  Object {
    "displayName": "Sommerfugl",
    "id": 3,
    "identifier": Object {
      "museumNo": "C333",
      "subNo": "38"
    }
  },
  Object {
    "displayName": "Øks",
    "id": 5,
    "identifier": Object {
      "museumNo": "C666",
      "subNo": "3"
    }
  }
]
`;

exports[`SortObject Sort inputJsonObject on identifier 1`] = `
Array [
  Object {
    "displayName": "Øks",
    "id": 5,
    "identifier": Object {
      "museumNo": "C666",
      "subNo": "3"
    }
  },
  Object {
    "displayName": "Sverd",
    "id": 2,
    "identifier": Object {
      "museumNo": "C222",
      "subNo": "31"
    }
  },
  Object {
    "displayName": "Sommerfugl",
    "id": 3,
    "identifier": Object {
      "museumNo": "C333",
      "subNo": "38"
    }
  }
]
`;

exports[`SortObject Sort inputJsonObject on museumNo 1`] = `
Array [
  Object {
    "displayName": "Øks",
    "id": 5,
    "identifier": Object {
      "museumNo": "C666",
      "subNo": "3"
    }
  },
  Object {
    "displayName": "Sverd",
    "id": 2,
    "identifier": Object {
      "museumNo": "C222",
      "subNo": "31"
    }
  },
  Object {
    "displayName": "Sommerfugl",
    "id": 3,
    "identifier": Object {
      "museumNo": "C333",
      "subNo": "38"
    }
  }
]
`;

exports[`SortObject Sort inputJsonObject on subNo 1`] = `
Array [
  Object {
    "displayName": "Øks",
    "id": 5,
    "identifier": Object {
      "museumNo": "C666",
      "subNo": "3"
    }
  },
  Object {
    "displayName": "Sverd",
    "id": 2,
    "identifier": Object {
      "museumNo": "C222",
      "subNo": "31"
    }
  },
  Object {
    "displayName": "Sommerfugl",
    "id": 3,
    "identifier": Object {
      "museumNo": "C333",
      "subNo": "38"
    }
  }
]
`;

exports[`SortObject Sort int (intInStr) in string value 1`] = `
Array [
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  }
]
`;

exports[`SortObject Sort int (intInStr) in string value descending 1`] = `
Array [
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  }
]
`;

exports[`SortObject Sort int value 1`] = `
Array [
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  }
]
`;

exports[`SortObject Sort int value descending 1`] = `
Array [
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  }
]
`;

exports[`SortObject Sort node Pics on value and name 1`] = `
Array [
  Object {
    "marked": false,
    "path": Array [
      Object {
        "id": 2,
        "name": "Utviklingsmuseet",
        "url": "/magasin/2"
      },
      Object {
        "id": 3,
        "name": "Forskningens hus ",
        "url": "/magasin/3"
      }
    ],
    "value": Object {
      "groupRead": "foo",
      "id": 12,
      "isPartOf": 3,
      "name": "aaa",
      "path": ",1,2,3,12,",
      "type": "Room",
      "updatedBy": 123,
      "updatedDate": "2016-10-24T16:49:13+00:00"
    }
  },
  Object {
    "marked": false,
    "path": Array [
      Object {
        "id": 2,
        "name": "Utviklingsmuseet",
        "url": "/magasin/2"
      },
      Object {
        "id": 3,
        "name": "Forskningens hus",
        "url": "/magasin/3"
      }
    ],
    "value": Object {
      "groupRead": "foo",
      "id": 7,
      "isPartOf": 3,
      "name": "bbb ",
      "path": ",1,2,3,7,",
      "type": "Room",
      "updatedBy": 123,
      "updatedDate": "2016-10-24T12:07:21+00:00"
    }
  },
  Object {
    "marked": false,
    "path": Array [
      Object {
        "id": 2,
        "name": "Utviklingsmuseet",
        "url": "/magasin/2"
      },
      Object {
        "id": 3,
        "name": "Forskningens hus",
        "url": "/magasin/3"
      }
    ],
    "value": Object {
      "groupRead": "foo",
      "id": 15,
      "isPartOf": 3,
      "name": "ccc",
      "path": ",1,2,3,15,",
      "type": "StorageUnit",
      "updatedBy": 123,
      "updatedDate": "2016-10-28T13:43:15+00:00"
    }
  }
]
`;

exports[`SortObject Sort object Pics on value and museumNo 1`] = `
Array [
  Object {
    "marked": true,
    "path": Array [
      Object {
        "id": 2,
        "name": "Utviklingsmuseet",
        "url": "/magasin/2"
      },
      Object {
        "id": 3,
        "name": "Forskningens hus",
        "url": "/magasin/3"
      },
      Object {
        "id": 4,
        "name": "Kulturværelset",
        "url": "/magasin/4"
      }
    ],
    "value": Object {
      "id": 3,
      "museumNo": "MusK58 1",
      "subNo": "3",
      "term": "Spenne"
    }
  },
  Object {
    "marked": true,
    "path": Array [
      Object {
        "id": 2,
        "name": "Utviklingsmuseet",
        "url": "/magasin/2"
      },
      Object {
        "id": 3,
        "name": "Forskningens hus",
        "url": "/magasin/3"
      },
      Object {
        "id": 4,
        "name": "Kulturværelset",
        "url": "/magasin/4"
      }
    ],
    "value": Object {
      "id": 4,
      "museumNo": "MusK58 22",
      "subNo": "4",
      "term": "Briller"
    }
  },
  Object {
    "marked": true,
    "path": Array [
      Object {
        "id": 2,
        "name": "Utviklingsmuseet",
        "url": "/magasin/2"
      }
    ],
    "value": Object {
      "id": 2,
      "museumNo": "MusK58 3",
      "subNo": "2",
      "term": "Mansjettknapp"
    }
  }
]
`;

exports[`SortObject Sort string value 1`] = `
Array [
  Object {
    "stringTest": "bb"
  },
  Object {
    "stringTest": "2"
  },
  Object {
    "stringTest": "bb"
  },
  Object {
    "stringTest": "ZZ"
  },
  Object {
    "stringTest": "bb"
  },
  Object {
    "stringTest": "bb"
  },
  Object {
    "stringTest": "aa"
  },
  Object {
    "stringTest": "AAA"
  },
  Object {
    "stringTest": "bb"
  },
  Object {
    "stringTest": "ååå"
  },
  Object {
    "stringTest": "ååå"
  },
  Object {
    "stringTest": "ååå"
  },
  Object {
    "stringTest": "ååå"
  }
]
`;

exports[`SortObject Sort string value descending 1`] = `
Array [
  Object {
    "date": "1982-10-31T23:00:00.000Z",
    "float": 2.5,
    "floatInStr": "2.5",
    "int": 200,
    "intInStr": "211",
    "string": "ååå"
  },
  Object {
    "date": "2016-10-01T23:00:00.000Z",
    "float": 26.5,
    "floatInStr": "26.5",
    "int": 22,
    "intInStr": "222",
    "string": "ZZ"
  },
  Object {
    "date": "2016-10-11T23:00:00.000Z",
    "float": 12.5,
    "floatInStr": "13232.5",
    "int": 333,
    "intInStr": "11111",
    "string": "zz"
  },
  Object {
    "date": "2016-11-31T23:00:00.000Z",
    "float": 222.5,
    "floatInStr": "22332.5",
    "int": 190,
    "intInStr": "23",
    "string": "a"
  },
  Object {
    "date": "2003-06-31T23:00:00.000Z",
    "float": 452.5,
    "floatInStr": "33232.5",
    "int": 190,
    "intInStr": "23333",
    "string": "a"
  },
  Object {
    "date": "2011-10-22T23:00:00.000Z",
    "float": 2.6,
    "floatInStr": "2.8",
    "int": 0,
    "intInStr": "0",
    "string": ""
  },
  Object {},
  Object {},
  Object {
    "floatInStr": "2.2"
  }
]
`;

exports[`parseISODateNonStrict should accept full iso timestamp 1`] = `"2016-09-07T22:56:00.000Z"`;
